project/logs/20250708_112755.log
WSTRINGHello,DirectX!

Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

Use FeatureLevel : 12_2

Complete create D3D12Device!!!

Bigin CompileShader, path:Object3D.vs.hlsl,profiale:vs_6_0

Compile Succeeded, path:Object3D.vs.hlsl,profiale:vs_6_0

Bigin CompileShader, path:Object3D.ps.hlsl,profiale:ps_6_0

Object3D.ps.hlsl:26:43: error: too many elements in vector initialization (expected 3 elements, have 4)
    float3 TransformedUV = mul(float32_t3(input.texCoord,0.0f, 1.0f), gMaterial.uvTransform);
                                          ^

